# vdf-reader

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml
examples/: dir.rs  serde.rs  table.rs  tokens.rs
src/: error.rs  event.rs  lexer.rs  lib.rs  parser.rs  reader.rs  serde.rs  tokenizer.rs
src/entry/: array.rs  mod.rs  statement.rs  table.rs  value.rs
tests/: parse.rs  serde.rs
tests/data/: DialogConfigOverlay_1280x720.vdf  concrete.vmt  enuminmap.vdf  messy.vdf  serde_array_type.vdf  toplevel.vdf
tests/errors/: concrete.vmt  novalue.vdf  serde_array_type.vdf  unmatched.vdf
tests/snapshots/: parse__parse-2.snap  parse__parse.snap  parse__tests__data__DialogConfigOverlay_1280x720.vdf.snap  parse__tests__data__concrete.vmt.snap  parse__tests__data__messy.vdf.snap  parse__tests__data__toplevel.vdf.snap  serde__table__tests__data__DialogConfigOverlay_1280x720.vdf.snap  serde__table__tests__data__concrete.vmt.snap  serde__table__tests__data__serde_array_type.vdf.snap  serde__table__tests__data__toplevel.vdf.snap  serde__table_to_material__tests__data__DialogConfigOverlay_1280x720.vdf.snap  serde__table_to_material__tests__data__concrete.vmt.snap  serde__table_to_material__tests__data__messy.vdf.snap  serde__table_to_material__tests__data__serde_array_type.vdf.snap  serde__tests__data__DialogConfigOverlay_1280x720.vdf.snap  serde__tests__data__concrete.vmt.snap  serde__tests__data__enuminmap.vdf.snap  serde__tests__data__game_text.vmt.snap  serde__tests__data__internal_tag.vdf.snap  serde__tests__data__messy.vdf.snap  (+5 more)
