[package]
name = "vdf-reader"
version = "0.2.0"
edition = "2021"
description = "Rust parser for valve vdf files."
license = "MIT"
repository = "https://github.com/icewind1991/vdf-reader"
rust-version = "1.70.0"

[dependencies]
logos = "0.14.0"
thiserror = "1.0.59"
miette = "7.2.0"
parse-display = "0.9.0"
serde = { version = "1.0.200", features = ["derive"] }

[dev-dependencies]
test-case = "3.3.1"
insta = { version = "1.38.0", features = ["ron"] }
miette = { version = "7.2.0", features = ["fancy"] }
walkdir = "2.5.0"
maplit = "1.0.2"
